mobile menu and search - close when click on body
- close when click on body

--- a/Build_v6/css/main.css
+++ b/Build_v6/css/main.css
@@ -157,7 +157,7 @@ ul, ol {
     @media screen and (max-width: 1023px) {
       .search-input:focus + .search-btn, .facet-search .facet-input:focus + .search-btn {
         border-radius: 0;
-        background-position: 14px 13px; } }
+        background-position: 16px 15px; } }
   @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .search-input, .facet-search .facet-input {
       width: 266px; } }
@@ -165,7 +165,7 @@ ul, ol {
     .search-input, .facet-search .facet-input {
       padding: 0 0 0 50px;
       width: 96%;
-      height: 40px;
+      height: 45px;
       border-left: none;
       border-radius: 0; } }
   @media screen and (max-width: 767px) {
@@ -391,7 +391,7 @@ button:focus {
   outline: none; }
 
 .link-a {
-  color: #9B885F; }
+  color: #ffffff; }
 
 .sm-a {
   color: #9B885F;
@@ -406,9 +406,9 @@ button:focus {
   letter-spacing: 0.4px; }
 
 .btn-container {
-  margin: 28px 0; }
+  padding: 28px 0 12px; }
 
-.btn-basic, .rites-btn, .btn-primary, .btn-sec, .custom-button, .btn-dropdown, .btn-add, .btn-round, .btn-round-primary, .load-more, .btn-round-sec, .btn-round-pink {
+.btn-basic, .rites-btn, .btn-primary, .btn-sec, .custom-button, .btn-dropdown, .btn-add, .btn-round, .btn-rnd-purp-bg, .btn-round-primary, .load-more, .btn-round-sec, .btn-round-pink {
   text-align: center;
   font-size: 12px;
   letter-spacing: 0.7px;
@@ -462,19 +462,25 @@ button:focus {
     .btn-add {
       width: 100%; } }
 
-.btn-round, .btn-round-primary, .load-more, .btn-round-sec, .btn-round-pink {
+.btn-round, .btn-rnd-purp-bg, .btn-round-primary, .load-more, .btn-round-sec, .btn-round-pink {
   border-radius: 22.5px;
   min-width: 150px;
-  border: 1px solid #C1B497;
+  border: 1px solid #C5BCCF;
   padding: 0 30px;
   font-family: "basisgrot-med", Helvetica, sans-serif; }
   @media screen and (max-width: 1023px) {
-    .btn-round, .btn-round-primary, .load-more, .btn-round-sec, .btn-round-pink {
+    .btn-round, .btn-rnd-purp-bg, .btn-round-primary, .load-more, .btn-round-sec, .btn-round-pink {
       display: block;
       margin: 0 auto 16px;
       padding: 0 12px;
       max-width: 160px;
       line-height: 43px; } }
+
+.btn-rnd-purp-bg {
+  border: 1px solid #fff;
+  color: #ffffff; }
+  .btn-rnd-purp-bg:hover {
+    color: #ffffff; }
 
 .btn-round-primary, .load-more {
   background-color: #C1B497;
@@ -645,7 +651,7 @@ input[type="radio"], input[type="checkbox"] {
       width: 100%;
       background: #fff;
       margin: 0;
-      height: 40px; }
+      height: 45px; }
       .top-search.active {
         display: flex; } }
 
@@ -666,11 +672,11 @@ input[type="radio"], input[type="checkbox"] {
   @media screen and (max-width: 1023px) {
     .search-btn {
       margin: 0;
-      width: 40px;
-      height: 40px;
+      width: 45px;
+      height: 45px;
       border-right: none;
       border-radius: 0;
-      background-position: 14px 13px; } }
+      background-position: 16px 15px; } }
 
 .info-item, .info-user, .info-assist, .info-wish, .info-bag {
   font-size: 12px;
@@ -931,7 +937,7 @@ input[type="radio"], input[type="checkbox"] {
       max-width: 360px;
       max-height: 100vh;
       overflow: auto;
-      padding: 0 0 120px 0;
+      padding: 0;
       background-color: #fff; } }
   @media screen and (min-width: 1024px) {
     .prime-nav .img-container {
@@ -950,14 +956,16 @@ input[type="radio"], input[type="checkbox"] {
     .nav-menu {
       display: block; } }
 
-.nav-item:first-child .prime-title {
-  padding-left: 2px; }
-@media screen and (min-width: 1024px) {
-  .nav-item:hover .sec-nav {
-    display: flex; } }
-@media screen and (max-width: 1023px) {
-  .nav-item {
-    margin: 0; } }
+.nav-item {
+  /*  display: none;*/ }
+  .nav-item:first-child .prime-title {
+    padding-left: 2px; }
+  @media screen and (min-width: 1024px) {
+    .nav-item:hover .sec-nav {
+      display: flex; } }
+  @media screen and (max-width: 1023px) {
+    .nav-item {
+      margin: 0; } }
 
 .prime-title {
   /* display: none;*/
@@ -991,7 +999,7 @@ input[type="radio"], input[type="checkbox"] {
       width: 100%;
       padding: 14px 26px;
       border-top: 1px solid #EAE9E9;
-      background: url(../css/images/icons/icon-arrow-next.svg) no-repeat right 19px top 17.5px;
+      background: url(../css/images/icons/icon-arrow-next-purp.svg) no-repeat right 19px top 17.5px;
       background-size: 8px; } }
 
 @media screen and (max-width: 1023px) {
@@ -999,7 +1007,7 @@ input[type="radio"], input[type="checkbox"] {
     width: 59%; } }
 
 .go-back {
-  background: url(../css/images/icons/icon-arrow-back.svg) no-repeat 26px center;
+  background: url(../css/images/icons/icon-arrow-back-purp.svg) no-repeat 26px center;
   background-size: 8px;
   padding-left: 52px;
   background-color: #f8f8f8; }
@@ -1017,9 +1025,9 @@ input[type="radio"], input[type="checkbox"] {
   display: none; }
   @media screen and (max-width: 1023px) {
     .mob-menu-footer {
+      padding-bottom: 100px;
       display: block;
-      border-top: 3px solid #C1B497;
-      border-bottom: 1px solid #EAE9E9; } }
+      background-color: #C5BCCF; } }
   .mob-menu-footer .icon-a, .mob-menu-footer .email-a, .mob-menu-footer .help-a {
     padding-left: 68px;
     color: #333333; }
@@ -1028,7 +1036,8 @@ input[type="radio"], input[type="checkbox"] {
     background-size: 15px; }
   .mob-menu-footer .help-a {
     background: url(../css/images/icons/icon-question.svg) no-repeat 29px center;
-    background-size: 8px; }
+    background-size: 8px;
+    border-bottom: 1px solid #ffffff; }
   .mob-menu-footer .dropdown-a {
     color: #333333;
     /* background: $dropdown right 19px/ 11px no-repeat;*/
@@ -1051,14 +1060,14 @@ input[type="radio"], input[type="checkbox"] {
   @media screen and (min-width: 1024px) {
     .sec-nav {
       position: absolute;
-      top: 94px;
+      top: 96px;
       left: 0;
       width: 100%;
       padding: 70px 17% 72px 55px;
       border-top: 5px solid #f8f8f8; } }
   @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .sec-nav {
-      top: 41px;
+      top: 96px;
       padding: 58px 52px 79px 52px; } }
   @media screen and (min-width: 1024px) and (max-width: 1023px) {
     .sec-nav {
@@ -4297,7 +4306,7 @@ input[type="radio"], input[type="checkbox"] {
   display: none !important; }
 
 .show {
-  display: block !important; }
+  display: block; }
 
 .fixed {
   position: fixed; }
