--- a/Build_v6/css/main.scss
+++ b/Build_v6/css/main.scss
@@ -287,7 +287,7 @@ ul, ol {
 
         @include until($tablet) {
            border-radius: 0;
-           background-position: 14px 13px;
+            background-position: 16px 15px;
         } 
     } 
 
@@ -298,7 +298,7 @@ ul, ol {
     @include until($tablet) {
         padding: 0 0 0 50px;
         width: 96%;
-        height: 40px;
+        height: 45px;
         border-left: none;
         border-radius: 0;
     }
@@ -592,7 +592,7 @@ button:focus {
 }
 
 .link-a {
-    color: $dk-gold;
+    color: #ffffff;
 }
 
 .sm-a {
@@ -610,7 +610,7 @@ button:focus {
 }
 
 .btn-container {
-    margin: 28px 0;
+    padding: 28px 0 12px;
 }
 
 .btn-basic {
@@ -687,7 +687,7 @@ button:focus {
     @extend .btn-basic;
     border-radius: 22.5px;
     min-width: 150px;
-    border: 1px solid $gold;
+    border: 1px solid $purp;
     padding: 0 30px;
     font-family: $sans-med;
 
@@ -697,6 +697,16 @@ button:focus {
         padding: 0 12px;
         max-width: 160px;
         line-height: 43px;
+    }
+}
+
+.btn-rnd-purp-bg {
+    @extend .btn-round;
+    border: 1px solid #fff;
+    color: #ffffff;
+
+    &:hover {
+        color: #ffffff;
     }
 }
 
@@ -913,7 +923,7 @@ input[type="radio"], input[type="checkbox"] {
         width: 100%;
         background: #fff;
         margin: 0;
-        height: 40px;
+        height: 45px;
 
         &.active {
             display: flex;
@@ -940,11 +950,11 @@ input[type="radio"], input[type="checkbox"] {
 
     @include until($tablet) {
         margin: 0;
-        width: 40px;
-        height: 40px;
+        width: 45px;
+        height: 45px;
         border-right: none;
         border-radius: 0;
-        background-position: 14px 13px;
+        background-position: 16px 15px;
     }
 }
 
@@ -1308,7 +1318,7 @@ input[type="radio"], input[type="checkbox"] {
         max-width: 360px;
         max-height: 100vh;
         overflow: auto;
-        padding: 0 0 120px 0;
+        padding: 0;
         background-color: #fff;
     }
 
@@ -1337,6 +1347,7 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .nav-item {
+  /*  display: none;*/
 
     &:first-child .prime-title {
         padding-left: 2px;
@@ -1398,7 +1409,7 @@ input[type="radio"], input[type="checkbox"] {
         width: 100%;
         padding: $mob-menu-item-pad;
         border-top: 1px solid $lgt-grey;
-        background: url(../css/images/icons/icon-arrow-next.svg) no-repeat right 19px top 17.5px;
+        background: url(../css/images/icons/icon-arrow-next-purp.svg) no-repeat right 19px top 17.5px;
         background-size: 8px;
     }
 }
@@ -1412,7 +1423,7 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .go-back {
-    background: url(../css/images/icons/icon-arrow-back.svg) no-repeat 26px center;
+    background: url(../css/images/icons/icon-arrow-back-purp.svg) no-repeat 26px center;
     background-size: 8px;
     padding-left: 52px;
     background-color: $x-lgt-grey;
@@ -1433,9 +1444,9 @@ input[type="radio"], input[type="checkbox"] {
     display: none;
 
     @include until($tablet) {
+        padding-bottom: 100px;
         display: block;
-        border-top: 3px solid $gold;
-        border-bottom: 1px solid $lgt-grey;
+        background-color: $purp;
     }
 
     .icon-a {
@@ -1454,6 +1465,7 @@ input[type="radio"], input[type="checkbox"] {
         @extend .icon-a;
         background: url(../css/images/icons/icon-question.svg) no-repeat 29px center;
         background-size: 8px;
+        border-bottom: 1px solid #ffffff;
     }
 
     .dropdown-a {
@@ -1489,7 +1501,7 @@ input[type="radio"], input[type="checkbox"] {
     
     @include at-least($tablet) {
         position: absolute;
-        top: 94px;
+        top: 96px;
         left: 0;
         width: 100%;
         padding: 70px 17% 72px 55px;
@@ -1497,7 +1509,7 @@ input[type="radio"], input[type="checkbox"] {
     }
 
     @include between($tablet, $med-desk) {
-        top: 41px;
+        top: 96px;
         padding: 58px 52px 79px 52px;
     }
 
@@ -6098,7 +6110,7 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .show {
-    display: block !important;
+    display: block;
 }
 
 .fixed {
